# Fable-Test-Terraria-Ferraria

./: .dockerignore  .gitignore  .railwayignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
.cargo/: config.toml
crates/client/: Cargo.toml
crates/client/src/: app.rs  entities.rs  hotbar.rs  interact.rs  main.rs  net.rs  npcs.rs  player.rs  render.rs  ui.rs  world_view.rs
crates/client/src/ui/: crafting.rs  dialogue.rs  inventory.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  net.rs
crates/server/src/sim/: combat.rs  enemies.rs  entities.rs  fluids.rs  game.rs  interact.rs  inventory.rs  mod.rs  survival.rs  world_tick.rs
crates/server/src/worldgen/: caves.rs  flora.rs  fluids_fill.rs  loot.rs  mod.rs  noise.rs  ores.rs  pockets.rs  runner.rs  spawn.rs  structures.rs  terrain.rs
crates/server/tests/: netplay.rs  worldgen.rs
crates/shared/: Cargo.toml
crates/shared/src/: crafting.rs  enemies.rs  inventory_ops.rs  items.rs  lib.rs  loadout.rs  macros.rs  physics.rs  protocol.rs  rng.rs  tiles.rs  world.rs
docs/: ARCHITECTURE.md  DESIGN.md  NETWORKING.md
scripts/: build-web.sh  check.sh  dev.sh
web/: index.html  quad_ws.js
