[package]
name = "ferraria-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferraria-shared = { path = "../shared" }
serde.workspace = true
postcard.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
