[package]
name = "ferraria-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ferraria-shared = { path = "../shared" }
serde.workspace = true
postcard.workspace = true
tokio.workspace = true
axum.workspace = true
futures-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
# PNG output for the `worldgen_preview` dev binary only (server-only dep;
# pinned to the 0.24 line macroquad already pulls so the tree keeps a single
# `image` version).
image = { version = "0.24", default-features = false, features = ["png"] }

[dev-dependencies]
# WebSocket client for the netplay integration test (tests only; the wasm
# client uses the quad_ws.js bridge instead, docs/NETWORKING.md). 0.29 keeps a
# single tungstenite version with axum 0.8's ws feature.
tokio-tungstenite = "0.29"
